add deps and tailwind

--- a/lib/elixir_newbie_web/templates/page/index.html.heex
+++ b/lib/elixir_newbie_web/templates/page/index.html.heex
@@ -3,7 +3,7 @@
   <p>Peace of mind from prototype to production</p>
 </section>
 
-<section class="row">
+<section class="row bg-red-400">
   <article class="column">
     <h2>Resources</h2>
     <ul>
