--- a/trunk/assets/css/app.css
+++ b/trunk/assets/css/app.css
@@ -1,10 +1,31 @@
 /* This file is for your main application CSS */
-@tailwind base;
+/* @tailwind base;
 
 @tailwind components;
 
-@tailwind utilities;
-  
+@tailwind utilities; */
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@import "./blog.css";
+@import "./footer.css";
+@import "./navigation.css";
+@import "./page.css";
+@import "./variables.css";
+
+/* import fonts */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+
+/* code style */
+@import "./makeup_pariaso_dark.css";
+body {
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background-color: var(--background);
+}
+
 /* Alerts and form errors used by phx.new */
 .alert {
   padding: 15px;
