--- a/trunk/assets/css/app.css
+++ b/trunk/assets/css/app.css
@@ -16,7 +16,15 @@
 
 /* import fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+.overflow-scroll::-webkit-scrollbar {
+  display: none;
+}
 
+/* Hide scrollbar for IE, Edge and Firefox */
+.overflow-scroll {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 /* code style */
 @import "./makeup_pariaso_dark.css";
 body {
