--- a/trunk/assets/css/page.css
+++ b/trunk/assets/css/page.css
@@ -6,7 +6,7 @@
   .page {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-areas: "navigation" "content";
     height: 100vh;
   }
