--- a/trunk/assets/css/app.css
+++ b/trunk/assets/css/app.css
@@ -8,25 +8,26 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "./blog.css";
+@import "./markdown.css";
 @import "./footer.css";
 @import "./navigation.css";
 @import "./page.css";
 @import "./variables.css";
+@import "./makeup_pariaso_dark.css";
 
 /* import fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
+
 .overflow-scroll::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .overflow-scroll {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
+
 /* code style */
-@import "./makeup_pariaso_dark.css";
 body {
   padding: 0;
   margin: 0;
