--- a/trunk/assets/css/variables.css
+++ b/trunk/assets/css/variables.css
@@ -5,6 +5,7 @@
   --surface0: #0e0e10;
   --foreground: white;
   --primary: #a800a1;
+  --code: black;
   --twitter: #1da1f2;
   --linkedin: #3b5998;
   --mobile-size: 600px;
