--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,11 +18,8 @@
 /* import fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
-.overflow-scroll::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
-}
-
-.overflow-scroll {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
