--- a/trunk/assets/css/app.css
+++ b/trunk/assets/css/app.css
@@ -11,6 +11,7 @@
 @import "./markdown.css";
 @import "./footer.css";
 @import "./navigation.css";
+@import "./podcast_live.css";
 @import "./page.css";
 @import "./variables.css";
 @import "./makeup_pariaso_dark.css";
