--- a/trunk/assets/css/app.css
+++ b/trunk/assets/css/app.css
@@ -8,7 +8,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "./markdown.css";
+@import "./blog_live.css";
 @import "./footer.css";
 @import "./navigation.css";
 @import "./podcast_live.css";
@@ -19,7 +19,13 @@
 /* import fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
-
+@media (max-width: 767px) {
+  ::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
 /* code style */
 body {
   padding: 0;
