--- a/trunk/assets/css/footer.css
+++ b/trunk/assets/css/footer.css
@@ -1,16 +1,16 @@
-@media (min-width: 601px) {
+@media (min-width: 768px) {
   .footer {
     visibility: hidden;
     display: none;
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   .footer {
+    height: 80px;
     grid-area: footer;
     width: 100%;
     background-color: var(--primary);
-    height: 15vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: "home-link blog-link podcast-link";
