Change color variables and improve styles

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,8 +1,8 @@
 @import "./navigation.css";
 
 :root {
-  --background: #1b001c;
-  --surface0: #0e0e10;
+  --surface0: #1b001c;
+  --background: #1f2028;
   --foreground: white;
   --primary: #a800a1;
   --secondary: #5bdfe4;
