--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -1,4 +1,5 @@
 @media (min-width: 768px) {
+  /* This is a bit hacky, and should be refactored to leverage tailwind */
   .navigation {
     grid-area: navigation;
     width: 100%;
@@ -6,9 +7,17 @@
     min-height: 100px;
     display: grid;
     grid-template-columns: 10px auto auto auto 5fr auto auto 10px;
+    grid-template-rows: auto auto;
     column-gap: 3vw;
-    grid-template-areas: "... brand blog-link podcast-link ... twitter-link linkedin-link ...";
+    row-gap: 0;
+    grid-template-areas:
+      "... brand blog-link podcast-link ... twitter-link linkedin-link ..."
+      "hr hr hr hr hr hr hr hr";
     align-items: center;
+  }
+
+  .navigation__hr {
+    grid-area: hr;
   }
 
   .navigation__link--blog {
@@ -49,6 +58,7 @@
   .navigation {
     grid-area: navigation;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -57,6 +67,8 @@
 
   .navigation__brand {
     height: 10vh;
+    flex-basis: 100%;
+    margin: 10px 0;
   }
   .navigation__icon,
   .navigation__social-links,
