--- a/trunk/assets/css/podcast_live.css
+++ b/trunk/assets/css/podcast_live.css
@@ -2,3 +2,7 @@
   color: var(--secondary);
   text-decoration: underline;
 }
+
+::-webkit-media-controls-enclosure {
+  background-color: var(--secondary);
+}
