--- a/trunk/assets/css/app.css
+++ b/trunk/assets/css/app.css
@@ -14,7 +14,7 @@
 @import "./podcast_live.css";
 @import "./page.css";
 @import "./variables.css";
-@import "./makeup_pariaso_dark.css";
+@import "./makeup.css";
 
 /* import fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
