--- a/trunk/assets/css/variables.css
+++ b/trunk/assets/css/variables.css
@@ -3,6 +3,7 @@
 :root {
   --surface0: #1b001c;
   --background: #1f2028;
+  --blockquote: #2f1e2e;
   --foreground: white;
   --primary: #a800a1;
   --secondary: #5bdfe4;
