--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,10 +8,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "./blog_live.css";
-@import "./footer.css";
-@import "./podcast_live.css";
-@import "./page.css";
+@import "./animation.css";
 @import "./variables.css";
 @import "./makeup.css";
 
@@ -21,26 +18,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
-}
-
-.link-underline {
-  border-bottom-width: 0;
-  background-image: linear-gradient(transparent, transparent),
-    linear-gradient(#fff, #fff);
-  background-size: 0 3px;
-  background-position: 0 100%;
-  background-repeat: no-repeat;
-  transition: background-size 0.3s ease-in-out;
-}
-
-.link-underline-black {
-  background-image: linear-gradient(transparent, transparent),
-    linear-gradient(black, black);
-}
-
-.link-underline:hover {
-  background-size: 100% 3px;
-  background-position: 0 100%;
 }
 
 /* Alerts and form errors used by phx.new */
