--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,6 +18,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* Alerts and form errors used by phx.new */
