--- a/lib/elixir_newbie_web/templates/layout/root.html.heex
+++ b/lib/elixir_newbie_web/templates/layout/root.html.heex
@@ -4,6 +4,10 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property='og:title' content='Elixir Newbie'/>
+    <meta property='og:image' content='/images/default.png'/>
+    <meta property='og:description' content='Dedicated to helping developers learn Elixir.'/>
+    <meta property='og:url' content='//www.elixirnewbie.com/'/>
     <%= csrf_meta_tag() %>
     <%= live_title_tag "Elixir Newbie" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
