--- a/trunk/lib/elixir_newbie_web/templates/layout/root.html.heex
+++ b/trunk/lib/elixir_newbie_web/templates/layout/root.html.heex
@@ -15,7 +15,7 @@
     <meta content="Dedecated to helping developers learn Elixir" name="twitter:description">
     <meta content="https://www.elixirnewbie.com/images/default-40753a86dc7a9fdcd5b542b9705a15b3.png" name="twitter:image">
     <%= csrf_meta_tag() %>
-    <%= live_title_tag "Elixir Newbie" %>
+    <%= live_title_tag assigns[:page_title] || "Elixir Newbie", suffix: " · Elixir Newbie" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
     <script src="https://kit.fontawesome.com/bf8cc527ea.js" crossorigin="anonymous"></script>
